# generalized-knight

./: README.md
cpp/: .gitignore  CMakeLists.txt  bfs.cc  bfs.h  bfsRunner.cc  bfsRunner.h  board.cc  board.h  image.cc  image.h  knight.h  main.cc  next.cc  next.h  params.cc  params.h  rw.cc  rw.h  rwRunner.cc  rwRunner.h  startbox.h
cpp/scripts/: make_gif
python/: Analysis.ipynb  knight.py
web/: .gitignore  chess.js  index.html  main.go  server.py
web/knight/: color.js  index.html  visualizations.html
web/server/: color.go  knight.go  server.go
