cmake_minimum_required(VERSION 2.8)
set ( CMAKE_CXX_STANDARD 14 )
set ( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/scripts" )
project( Knight )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_library( knight_common rw.cc bfs.cc image.cc params.cc next.cc board.cc )

add_executable( knight main.cc rwRunner.cc bfsRunner.cc)
target_link_libraries( knight ${OpenCV_LIBS} knight_common )
